Fix nullability & validated